reign_derive/tests/ui/compile_fail/model_deleteable_tag.stderr
error[E0599]: no method named `drop` found for struct `UserName` in the current scope
   --> $DIR/model_deleteable_tag.rs:30:10
    |
14  | #[derive(Debug, Model)]
    |                 ----- method `drop` not found for this
...
30  |     user.drop().await.unwrap();
    |          ^^^^ method not found in `UserName`
    |
   ::: /Users/pksunkara/.rustup/toolchains/stable-x86_64-apple-darwin/lib/rustlib/src/rust/library/core/src/ops/drop.rs:164:8
    |
164 |     fn drop(&mut self);
    |        ----
    |        |
    |        the method is available for `Box<UserName>` here
    |        the method is available for `Arc<UserName>` here
    |        the method is available for `Rc<UserName>` here
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `drop`, perhaps you need to implement one of them:
            candidate #1: `Drop`
            candidate #2: `UnsafeFutureObj`
            candidate #3: `pin_project::__private::PinnedDrop`
            candidate #4: `pin_project::__private::PinnedDrop`
